--- a/react-front-end/src/components/login.css
+++ b/react-front-end/src/components/login.css
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
+  height: 350px;
   width: 250%;
   background-color: rgba(0, 0, 0, 0.582)
 }
